@@ -52,6 +52,7 @@ $ -> Language fix or change
  # Fixed issue [#24204] Primary keys from request should be cast to integer (Ian MacLennan).
  # Fixed issue [#24207] Level controller does not cast primary keys from request to int (Ian MacLennan).
  # Fixed issue [#24252] Unescaped value should be filtered (Ian MacLennan).
+ # Fixed issue [#24254] Hathor status module jtext plurals (Andrea Tarr).
 
 09-Jan-2011 Christophe Demko
  # [#24210] Revert to 1.5 behaviour for plugin language loading (Samuel Moffat)
